--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lindau</title>
+    <meta name="description" content="presentacio">
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="app.js"></script>
   </head>
-  <body>
-    <h1>Hello, UOC!</h1>
+  <body id="portada">
+    <header>
+      <div>
+        <p><a href="index.html">Lindau</a></p>
+      </div>
+      <div>
+        <nav>
+          <ul>
+              <li><a href="activities.html">Activities</a></li>
+              <li><a href="links.html">Links</a></li>
+              <li><a href="wiki.html">Wiki</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main id="benvinguda">
+      <div>
+          <h1>
+              Lindau am Bodensee    
+          </h1>
+      </div>
+    </main>
+    <footer class="footer">
+      <p>2022 © Marcel Weichsel</p>
+    </footer>
   </body>
 </html>
