Updated background, navbar and links page

--- a/src/activities.html
+++ b/src/activities.html
@@ -10,17 +10,19 @@
   </head>
   <body>
     <header>
-      <div>
-        <p><a href="index.html">Lindau</a></p>
-      </div>
-      <div>
-        <nav>
-          <ul>
-              <li  class="active"><a href="activities.html">Activites</a></li>
-              <li><a href="links.html">Links</a></li>
-              <li><a href="wiki.html">Wiki</a></li>
-          </ul>
-        </nav>
+      <div class="container">
+        <div>
+          <p><a href="index.html">Lindau</a></p>
+        </div>
+        <div>
+          <nav>
+            <ul>
+                <li class="active"><a href="activities.html">Activities</a></li>
+                <li><a href="links.html">Links</a></li>
+                <li><a href="wiki.html">Wiki</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
     <main>
@@ -38,7 +40,8 @@
           <p>
             Lüner Lake (German Lünersee) is a large lake near the town of Bludenz in Vorarlberg, Austria.
             The lake's depth was raised by 72 metres by the construction of a hydroelectric dam in 1958. The dam supplies water to four local power plants, Lünersee, Rodund I, Rodund II and Walgau. 
-            The lake is linked to the village of Brand by a cable car system, the Lünerseebahn.
+            The lake is linked to the village of Brand by a cable car system, the Lünerseebahn. 
+            <a href="links.html#LunerseeWiki">[source]</a>
           </p>
         </div>
       </div>
@@ -55,6 +58,7 @@
           <p>
             Die einzigartige Premium-Wellnesswelt am Bodensee. In der Sonne aalen, in 33 bis 38 Grad warmen Wasser die Seele baumeln oder sich im Wellnessbereich verwöhnen lassen: Die Therme Lindau ist ein Paradies aus Wärme und Wasser. 
             Auf 13 000 Quadratmeter Nutzfläche finden die Badegäste einen idealen Ort, um den Alltagsstress zu vergessen. Schließen Sie die Augen und lassen Sie sich einfach im warmen Wasser treiben.
+            <a href="links.html#ThermeOfficial">[source]</a>
           </p>
           <p>
             <a href="https://www.youtube.com/embed/-qmHtdPSH3g">Youtube</a>
@@ -78,9 +82,7 @@
             As of January 2020, the municipality has 434,335 inhabitants, the urban area 1.315 million (2009), and the Zürich metropolitan area 1.83 million (2011).
             Zürich is a hub for railways, roads, and air traffic. 
             Both Zurich Airport and Zürich's main railway station are the largest and busiest in the country.
-          </p>
-          <p>
-            <a href="https://es.wikipedia.org/wiki/Z%C3%BArich">Wiki Zurich</a>
+            <a href="links.html#ZurichWiki">[source]</a>
           </p>
         </div>
       </div>
@@ -101,9 +103,7 @@
             The palace was commissioned by King Ludwig II of Bavaria as a retreat and in honour of Richard Wagner. 
             Ludwig chose to pay for the palace out of his personal fortune and by means of extensive borrowing, rather than Bavarian public funds. 
             Construction began in 1869, but was never fully completed.
-          </p>
-          <p>
-            <a href="https://en.wikipedia.org/wiki/Neuschwanstein_Castle">Wiki Neuschwanstein</a>
+            <a href="links.html#NeuschwansteinWiki">[source]</a>
           </p>
         </div>
       </div>
