--- a/src/wiki.html
+++ b/src/wiki.html
@@ -10,17 +10,19 @@
   </head>
   <body>
     <header>
-      <div>
-        <p><a href="index.html">Lindau</a></p>
-      </div>
-      <div>
-        <nav>
-          <ul>
-              <li><a href="activities.html">Activities</a></li>
-              <li><a href="links.html">Links</a></li>
-              <li><a href="wiki.html">Wiki</a></li>
-          </ul>
-        </nav>
+      <div class="container">
+        <div>
+          <p><a href="index.html">Lindau</a></p>
+        </div>
+        <div>
+          <nav>
+            <ul>
+                <li><a href="activities.html">Activities</a></li>
+                <li><a href="links.html">Links</a></li>
+                <li class="active"><a href="wiki.html">Wiki</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
     <main>
