--- a/src/activities.html
+++ b/src/activities.html
@@ -25,7 +25,7 @@
       </div>
     </header>
     <main>
-      <h1>Activitats</h1>
+      <h1>Activities</h1>
 
       <h2>
         <a href="lunersee.html">Lunersee</a> 
@@ -88,12 +88,12 @@
       <hr>
 
       <h2>
-        Neuschwanstein
+        <a href="neuschwanstein.html">Neuschwanstein</a>
       </h2>
 
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/neuSchwanStein.jpg" class="img-fluid" alt="Neuschwanstein schloss">
+          <img src="img/neuSchwanStein-square.jpg" class="img-fluid" alt="Neuschwanstein schloss">
         </div>
 
         <div class="activitatText">
