--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body id="portada">
     <header>
       <div class="container">
-        <div>
-          <p><a href="index.html">Lindau</a></p>
+        <div class="divlogo">
+          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
@@ -24,15 +24,20 @@
         </div>
       </div>
     </header>
-    <main id="benvinguda">
-      <div class="titleBox">
-        <h1>
-            Lindau am Bodensee    
-        </h1>
+    <main id="maxMain">
+      <div id="benvinguda">
+        <div class="titleBox">
+          <h1>
+              Lindau am Bodensee
+          </h1>
+          <p>
+            <img src="img/IMG_0939.jpg" class="clip-circle" alt="Marcel"> 
+          </p>
+        </div>
       </div>
     </main>
     <footer class="footer">
-      <p>2022 © Marcel Weichsel</p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
     </footer>
   </body>
 </html>
