--- a/src/wiki.html
+++ b/src/wiki.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <div>
-        <h1>What is Lindau</h1>
+        <h1>What is Lindau <img src="img/question.svg" class="questionMark" alt="?"> </h1>
       </div>
       <div class ="presentacio">
         <p>
