updated animation, activities

--- a/src/activities.html
+++ b/src/activities.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <div class="container">
-        <div>
-          <p><a href="index.html">Lindau</a></p>
+        <div class="divlogo">
+          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
@@ -26,6 +26,28 @@
     </header>
     <main>
       <h1>Activities</h1>
+
+      <h2>
+        <a href="neuschwanstein.html">Neuschwanstein</a>
+      </h2>
+
+      <div class ="activitatResum">
+        <div class="activitatFoto">
+          <img src="img/neuSchwanStein-square.jpg" class="img-fluid" alt="Neuschwanstein schloss">
+        </div>
+
+        <div class="activitatText">
+          <p>
+            Neuschwanstein Castle is a 19th-century historicist palace on a rugged hill above the village of Hohenschwangau near Füssen in southwest Bavaria, Germany. 
+            The palace was commissioned by King Ludwig II of Bavaria as a retreat and in honour of Richard Wagner. 
+            Ludwig chose to pay for the palace out of his personal fortune and by means of extensive borrowing, rather than Bavarian public funds. 
+            Construction began in 1869, but was never fully completed.
+            <a href="links.html#NeuschwansteinWiki">[source]</a>
+          </p>
+        </div>
+      </div>
+
+      <hr>
 
       <h2>
         <a href="lunersee.html">Lunersee</a> 
@@ -85,32 +107,11 @@
           </p>
         </div>
       </div>
-      <hr>
-
-      <h2>
-        <a href="neuschwanstein.html">Neuschwanstein</a>
-      </h2>
-
-      <div class ="activitatResum">
-        <div class="activitatFoto">
-          <img src="img/neuSchwanStein-square.jpg" class="img-fluid" alt="Neuschwanstein schloss">
-        </div>
-
-        <div class="activitatText">
-          <p>
-            Neuschwanstein Castle is a 19th-century historicist palace on a rugged hill above the village of Hohenschwangau near Füssen in southwest Bavaria, Germany. 
-            The palace was commissioned by King Ludwig II of Bavaria as a retreat and in honour of Richard Wagner. 
-            Ludwig chose to pay for the palace out of his personal fortune and by means of extensive borrowing, rather than Bavarian public funds. 
-            Construction began in 1869, but was never fully completed.
-            <a href="links.html#NeuschwansteinWiki">[source]</a>
-          </p>
-        </div>
-      </div>
 
     </main>
 
     <footer class="footer">
-        <p>2022 © Marcel Weichsel</p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
     </footer>
 
   </body>
