--- a/src/lunersee.html
+++ b/src/lunersee.html
@@ -11,8 +11,8 @@
   <body>
     <header>
       <div class="container">
-        <div>
-          <p><a href="index.html">Lindau</a></p>
+        <div class="divlogo">
+          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
@@ -69,13 +69,13 @@
           <ul>
             <li><a href="">Therme Lindau</a></li>
             <li><a href="">Zurich</a></li>
-            <li><a href="">Neuschwanstein</a></li>
+            <li><a href="neuschwanstein.html">Neuschwanstein</a></li>
           </ul>
         </nav>
       </div>
     </main>
     <footer class="footer">
-      <p>2022 © Marcel Weichsel</p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
     </footer>
   </body>
 </html>
