--- a/src/neuschwanstein.html
+++ b/src/neuschwanstein.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <div class="container">
-        <div>
-          <p><a href="index.html">Lindau</a></p>
+        <div class="divlogo">
+          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
@@ -88,7 +88,7 @@
       </div>
     </main>
     <footer class="footer">
-      <p>2022 © Marcel Weichsel</p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
     </footer>
   </body>
 </html>
