--- a/src/wiki.html
+++ b/src/wiki.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <div class="container">
-        <div>
-          <p><a href="index.html">Lindau</a></p>
+        <div class="divlogo">
+          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
@@ -26,7 +26,7 @@
     </header>
     <main>
       <div>
-        <h1>What is Lindau <img src="img/question.svg" class="questionMark" alt="?"> </h1>
+        <h1>What is Lindau <img src="img/questionFont.svg" class="questionMark" alt="?"> </h1>
       </div>
       <div class ="presentacio">
         <p>
@@ -53,7 +53,7 @@
         </p>
   </main>
   <footer class="footer">
-    <p>2022 © Marcel Weichsel</p>
+    <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
   </footer>
   </body>
 </html>
