minor code fixes

--- a/src/neuschwanstein.html
+++ b/src/neuschwanstein.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lindau - Neuschwanstein</title>
     <meta name="description" content="presentacio">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -36,9 +36,9 @@
           Construction began in 1869, but was never fully completed.
         </p>
         <picture>
-          <source media="(max-width: 799px)" srcset="img/neuSchwanStein-square.jpg" />
-          <source media="(min-width: 800px)" srcset="img/neuSchwanStein-wide.jpg" />
-          <img src="img/neuSchwanStein-wide.jpg" width="1080px" class="img-article" alt="Neuschwanstein">
+          <source media="(max-width: 799px)" srcset="img/neuSchwanStein-square.jpg">
+          <source media="(min-width: 800px)" srcset="img/neuSchwanStein-wide.jpg">
+          <img src="img/neuSchwanStein-wide.jpg" width="1080" class="img-article" alt="Neuschwanstein">
         </picture>
         <p>
           The castle was intended as a private residence for the King, until he died in 1886. 
@@ -46,9 +46,9 @@
           More than 1.3 million people visit annually, with as many as 6,000 per day in the summer.
         </p>
         <picture>
-          <source srcset="img/neuSchwanStein-6000px.jpg?as=avif" type="image/avif"/>
-          <source srcset="img/neuSchwanStein-6000px.jpg?as=webp" width="1080px" type="image/webp"/>
-          <img src="img/neuSchwanStein-6000px.jpg?width=200" class="img-article" alt="Maria i Marcel"/>
+          <source srcset="img/neuSchwanStein-6000px.jpg?as=avif" width=1080 type="image/avif">
+          <source srcset="img/neuSchwanStein-6000px.jpg?as=webp" width="1080" type="image/webp">
+          <img src="img/neuSchwanStein-6000px.jpg" class="img-article" alt="Maria i Marcel">
         </picture>
         <p>
             Neuschwanstein embodies both the contemporaneous architectural fashion known as castle romanticism (German: Burgenromantik), and King Ludwig II's enthusiasm for the operas of Richard Wagner.
@@ -64,7 +64,7 @@
               sizes="(max-width: 400px) 400px, 6000px"
               src="img/neuSchwanStein-branca.jpg"
               class="img-article"
-              alt="Neuschwanstein"/>
+              alt="Neuschwanstein">
           <figcaption>
             <p>Neuschwanstein</p>
             <p>Taken from Sergi's camera</p>
