Lazy loading activity images

--- a/src/activities.html
+++ b/src/activities.html
@@ -33,7 +33,7 @@
 
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/neuSchwanStein-square.jpg" class="img-fluid" alt="Neuschwanstein schloss">
+          <img src="img/neuSchwanStein-square.jpg" class="img-fluid" loading="eager" alt="Neuschwanstein schloss">
         </div>
 
         <div class="activitatText">
@@ -55,7 +55,7 @@
       
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/lunersee-mm.jpg" class="img-fluid" alt="Lunersee MM">
+          <img src="img/lunersee-mm.jpg" class="img-fluid" loading="eager" alt="Lunersee MM">
         </div>
         <div class="activitatText">
           <p>
@@ -73,7 +73,7 @@
       </h2>
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/theater-sauna.jpg" class="img-fluid" alt="Theater Sauna">
+          <img src="img/theater-sauna.jpg" class="img-fluid" loading="lazy" alt="Theater Sauna">
         </div>
         <div class="activitatText">
           <p>
@@ -94,7 +94,7 @@
 
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/zurich-mm.jpg" class="img-fluid" alt="Zurich MM">
+          <img src="img/zurich-mm.jpg" class="img-fluid" loading="lazy" alt="Zurich MM">
         </div>
 
         <div class="activitatText">
