--- a/src/lunersee.html
+++ b/src/lunersee.html
@@ -36,7 +36,7 @@
           The lake is linked to the village of Brand by a cable car system, the Lünerseebahn.
         </p>
         <figure>
-          <img src="img/lunersee_horitzontal.jpg" width="800px" class="img-article" alt="Lunersee">
+          <img src="img/lunersee_horitzontal.jpg" width="800" class="img-article" alt="Lunersee">
           <figcaption>
             <p id="lunerseeCaption">A</p>
           </figcaption>
