Substitued index images

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
               Lindau am Bodensee
           </h1>
           <p>
-            <img src="img/IMG_0939.jpg" class="clip-circle" alt="Marcel"> 
+            <picture>
+              <source srcset="img/IMG_0939B.jpg?as=avif" type="image/avif">
+              <img src="img/IMG_0939B.jpg" class="clip-circle" alt="Marcel"> 
+            </picture>
           </p>
         </div>
       </div>
