--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div class="divlogo">
-          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
+          <a href="index.html"><img src="img/logo.svg" width="40" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
@@ -32,7 +32,7 @@
           </h1>
           <p>
             <picture>
-              <source srcset="img/IMG_0939B.jpg?as=avif" type="image/avif">
+              <source srcset="img/IMG_0939B.jpg?as=avif" width="499" type="image/avif">
               <img src="img/IMG_0939B.jpg" class="clip-circle" alt="Marcel"> 
             </picture>
           </p>
