fixed clip path aspect ratio

--- a/src/lunersee.html
+++ b/src/lunersee.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="divlogo">
-          <a href="index.html"><img src="img/logo.svg" class="logo" alt="logo"></a>
+          <a href="index.html"><img src="img/logo.svg" width="40" class="logo" alt="logo"></a>
         </div>
         <div>
           <nav>
