added height to index.html image and display swap in font import

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
           </h1>
           <p>
             <picture>
-              <source srcset="img/IMG_0939B.jpg?as=avif" width="200" type="image/avif">
-              <img src="img/IMG_0939B.jpg" width="200" class="clip-circle" alt="Marcel"> 
+              <source srcset="img/IMG_0939B.jpg?as=avif" width="200" height="186" type="image/avif">
+              <img src="img/IMG_0939B.jpg" width="200" height="186" class="clip-circle" alt="Marcel"> 
             </picture>
           </p>
         </div>
