Optimitzat imatges d'activities i lunarsee

--- a/src/activities.html
+++ b/src/activities.html
@@ -33,7 +33,10 @@
 
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/neuSchwanStein-square.jpg" class="img-fluid" loading="eager" alt="Neuschwanstein schloss">
+          <picture>
+            <source srcset="img/neuSchwanStein-square-Mobile.jpg?as=avif" width="600" height="600" type="image/avif">
+            <img src="img/neuSchwanStein-square-Mobile.jpg" class="img-fluid" loading="eager" alt="Neuschwanstein schloss">
+          </picture>
         </div>
 
         <div class="activitatText">
@@ -55,7 +58,10 @@
       
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/lunersee-mm.jpg" class="img-fluid" loading="eager" alt="Lunersee MM">
+          <picture>
+            <source srcset="img/lunersee-mm-Mobile.jpg?as=avif" width="600" height="612" type="image/avif">
+            <img src="img/lunersee-mm-Mobile.jpg" class="img-fluid" loading="eager" alt="Lunersee MM">
+          </picture>
         </div>
         <div class="activitatText">
           <p>
@@ -94,7 +100,10 @@
 
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/zurich-mm.jpg" class="img-fluid" loading="lazy" alt="Zurich MM">
+          <picture>
+            <source srcset="img/zurich-mm.jpg?as=avif" width="600" height="400" type="image/avif">    
+            <img src="img/zurich-mm.jpg" class="img-fluid" loading="lazy" alt="Zurich MM">
+          </picture>
         </div>
 
         <div class="activitatText">
