--- a/src/lunersee.html
+++ b/src/lunersee.html
@@ -36,7 +36,11 @@
           The lake is linked to the village of Brand by a cable car system, the Lünerseebahn.
         </p>
         <figure>
-          <img src="img/lunersee_horitzontal.jpg" width="800" class="img-article" alt="Lunersee">
+          <picture>
+            <source media="(max-width: 450px)" srcset="img/lunersee_horitzontal_Mobile.jpg?as=avif" width="420" height="337" type="image/avif"> 
+            <source media="(min-width: 450px)" srcset="img/lunersee_horitzontal_Desktop.jpg" width="800" height="600">
+            <img src="img/lunersee_horitzontal_Mobile.jpg" width="800" class="img-article" alt="Lunersee">
+          </picture>
           <figcaption>
             <p id="lunerseeCaption">A</p>
           </figcaption>
