zurich-mm-Mobile

--- a/src/activities.html
+++ b/src/activities.html
@@ -101,8 +101,8 @@
       <div class ="activitatResum">
         <div class="activitatFoto">
           <picture>
-            <source srcset="img/zurich-mm.jpg?as=avif" width="600" height="400" type="image/avif">    
-            <img src="img/zurich-mm.jpg" class="img-fluid" loading="lazy" alt="Zurich MM">
+            <source srcset="img/zurich-mm-Mobile.jpg?as=avif" width="600" height="400" type="image/avif">    
+            <img src="img/zurich-mm-Mobile.jpg" class="img-fluid" loading="lazy" alt="Zurich MM">
           </picture>
         </div>
 
