--- a/src/neuschwanstein.html
+++ b/src/neuschwanstein.html
@@ -36,9 +36,9 @@
           Construction began in 1869, but was never fully completed.
         </p>
         <picture>
-          <source media="(max-width: 799px)" srcset="img/neuSchwanStein-square.jpg">
-          <source media="(min-width: 800px)" srcset="img/neuSchwanStein-wide.jpg">
-          <img src="img/neuSchwanStein-wide.jpg" width="1080" class="img-article" alt="Neuschwanstein">
+          <source media="(max-width: 450px)" srcset="img/neuSchwanStein-square-450.jpg?as=avif" width="450" type="image/avif">
+          <source media="(min-width: 451px)" srcset="img/neuSchwanStein-wide-1080.jpg?as=avif" width="1080" type="image/avif">
+          <img src="img/neuSchwanStein-wide-1080.jpg" width="1080" class="img-article" alt="Neuschwanstein">
         </picture>
         <p>
           The castle was intended as a private residence for the King, until he died in 1886. 
@@ -46,9 +46,9 @@
           More than 1.3 million people visit annually, with as many as 6,000 per day in the summer.
         </p>
         <picture>
-          <source srcset="img/neuSchwanStein-6000px.jpg?as=avif" width=1080 type="image/avif">
-          <source srcset="img/neuSchwanStein-6000px.jpg?as=webp" width="1080" type="image/webp">
-          <img src="img/neuSchwanStein-6000px.jpg" class="img-article" alt="Maria i Marcel">
+          <source media="(max-width: 450px)" srcset="img/neuSchwanStein_MM_450.jpg?as=avif" width=1080 type="image/avif">
+          <source media="(min-width: 451px)" srcset="img/neuSchwanStein_MM_1080.jpg?as=webp" width="1080" type="image/webp">
+          <img src="img/neuSchwanStein_MM_1080.jpg" class="img-article" alt="Maria i Marcel">
         </picture>
         <p>
             Neuschwanstein embodies both the contemporaneous architectural fashion known as castle romanticism (German: Burgenromantik), and King Ludwig II's enthusiasm for the operas of Richard Wagner.
@@ -60,9 +60,9 @@
         </p>
         <figure>
           <img
-              srcset="img/neuSchwanStein-branca.jpg 6000w, img/neuSchwanStein-branca-400w.jpg 400w"
+              srcset="img/neuSchwanStein_branca_1080.jpg 6000w, img/neuSchwanStein_branca_400.jpg 400w"
               sizes="(max-width: 400px) 400px, 6000px"
-              src="img/neuSchwanStein-branca.jpg"
+              src="img/neuSchwanStein_branca_1080.jpg"
               class="img-article"
               alt="Neuschwanstein">
           <figcaption>
