Fixes for neuschanstein

--- a/src/neuschwanstein.html
+++ b/src/neuschwanstein.html
@@ -46,7 +46,7 @@
           More than 1.3 million people visit annually, with as many as 6,000 per day in the summer.
         </p>
         <picture>
-          <source media="(max-width: 450px)" srcset="img/neuSchwanStein_MM_450.jpg?as=avif" width=1080 type="image/avif">
+          <source media="(max-width: 450px)" srcset="img/neuSchwanStein_MM_450.jpg?as=avif" width="1080" type="image/avif">
           <source media="(min-width: 451px)" srcset="img/neuSchwanStein_MM_1080.jpg?as=webp" width="1080" type="image/webp">
           <img src="img/neuSchwanStein_MM_1080.jpg" class="img-article" alt="Maria i Marcel">
         </picture>
@@ -59,12 +59,11 @@
           The inspiration for the construction of Neuschwanstein came from two journeys that Ludwig took in 1867 – one in May to the reconstructed Wartburg near Eisenach, another in July to the Château de Pierrefonds, which Eugène Viollet-le-Duc was transforming from a ruined castle into a historistic palace.
         </p>
         <figure>
-          <img
-              srcset="img/neuSchwanStein_branca_1080.jpg 6000w, img/neuSchwanStein_branca_400.jpg 400w"
-              sizes="(max-width: 400px) 400px, 6000px"
-              src="img/neuSchwanStein_branca_1080.jpg"
-              class="img-article"
-              alt="Neuschwanstein">
+          <picture>
+            <source media="(max-width: 450px)" srcset="img/neuSchwanStein_branca_400.jpg?as=avif" width="450" type="image/avif">
+            <source media="(min-width: 451px)" srcset="img/neuSchwanStein_branca_1080.jpg?as=avif" width="1080" type="image/avif">
+            <img src="img/neuSchwanStein_branca_1080.jpg" class="img-article" alt="Neuschwanstein">
+          </picture>
           <figcaption>
             <p>Neuschwanstein</p>
             <p>Taken from Sergi's camera</p>
