fixed lunersee img

--- a/src/lunersee.html
+++ b/src/lunersee.html
@@ -37,8 +37,8 @@
         </p>
         <figure>
           <picture>
-            <source media="(max-width: 450px)" srcset="img/lunersee_horitzontal_Mobile.jpg?as=avif" width="420" height="337" type="image/avif"> 
-            <source media="(min-width: 450px)" srcset="img/lunersee_horitzontal_Desktop.jpg" width="800" height="600">
+            <source media="(max-width: 450px)" srcset="img/lunersee_horitzontal_Mobile.jpg?as=avif" width="450" type="image/avif"> 
+            <source media="(min-width: 451px)" srcset="img/lunersee_horitzontal_Desktop.jpg?as=avif" width="800" type="image/avif">
             <img src="img/lunersee_horitzontal_Mobile.jpg" width="800" class="img-article" alt="Lunersee">
           </picture>
           <figcaption>
