theater sauna img

--- a/src/activities.html
+++ b/src/activities.html
@@ -34,7 +34,7 @@
       <div class ="activitatResum">
         <div class="activitatFoto">
           <picture>
-            <source srcset="img/neuSchwanStein-square-450.jpg?as=avif" width="600" height="600" type="image/avif">
+            <source srcset="img/neuSchwanStein-square-450.jpg?as=avif" width="450" height="450" type="image/avif">
             <img src="img/neuSchwanStein-square-450.jpg" class="img-fluid" loading="eager" alt="Neuschwanstein schloss">
           </picture>
         </div>
@@ -79,7 +79,10 @@
       </h2>
       <div class ="activitatResum">
         <div class="activitatFoto">
-          <img src="img/theater-sauna.jpg" class="img-fluid" loading="lazy" alt="Theater Sauna">
+          <picture>
+            <source srcset="img/theater_sauna_450.jpg?as=avif" width="450" height="300" type="image/avif">           
+            <img src="img/theater_sauna_450.jpg" class="img-fluid" loading="lazy" alt="Theater Sauna">
+          </picture>
         </div>
         <div class="activitatText">
           <p>
