canvis del segon informe

--- a/src/activities.html
+++ b/src/activities.html
@@ -34,8 +34,8 @@
       <div class ="activitatResum">
         <div class="activitatFoto">
           <picture>
-            <source srcset="img/neuSchwanStein-square-450.jpg?as=avif" width="450" height="450" type="image/avif">
-            <img src="img/neuSchwanStein-square-450.jpg" class="img-fluid" loading="eager" alt="Neuschwanstein schloss">
+            <source srcset="img/neuSchwanStein_square_650.jpg?as=avif" width="650" height="650" type="image/avif">
+            <img src="img/neuSchwanStein_square_650.jpg" class="img-fluid" loading="eager" alt="Neuschwanstein schloss">
           </picture>
         </div>
 
@@ -123,7 +123,7 @@
     </main>
 
     <footer class="footer">
-      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" width="18" height="13" class="logoBottom" alt="logo"> </p>
     </footer>
 
   </body>
