--- a/src/links.html
+++ b/src/links.html
@@ -41,7 +41,7 @@
       </div>
   </main>
   <footer class="footer">
-    <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
+    <p>2022 © Marcel Weichsel - <img src="img/logo.svg" width="18" height="13" class="logoBottom" alt="logo"> </p>
   </footer>
   </body>
 </html>
