--- a/src/lunersee.html
+++ b/src/lunersee.html
@@ -38,8 +38,8 @@
         <figure>
           <picture>
             <source media="(max-width: 450px)" srcset="img/lunersee_horitzontal_Mobile.jpg?as=avif" width="450" type="image/avif"> 
-            <source media="(min-width: 451px)" srcset="img/lunersee_horitzontal_Desktop.jpg?as=avif" width="800" type="image/avif">
-            <img src="img/lunersee_horitzontal_Desktop.jpg" width="800" class="img-article" alt="Lunersee">
+            <source media="(min-width: 451px)" srcset="img/lunersee_horitzontal_Desktop.jpg?as=avif" width="1080" type="image/avif">
+            <img src="img/lunersee_horitzontal_Desktop.jpg" width="1080" class="img-article" alt="Lunersee">
           </picture>
           <figcaption>
             <p id="lunerseeCaption">A</p>
@@ -71,15 +71,15 @@
         </h2>
         <nav>
           <ul>
-            <li><a href="">Therme Lindau</a></li>
-            <li><a href="">Zurich</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich">Therme Lindau</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich">Zurich</a></li>
             <li><a href="neuschwanstein.html">Neuschwanstein</a></li>
           </ul>
         </nav>
       </div>
     </main>
     <footer class="footer">
-      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" width="18" height="13" class="logoBottom" alt="logo"> </p>
     </footer>
   </body>
 </html>
