--- a/src/neuschwanstein.html
+++ b/src/neuschwanstein.html
@@ -36,7 +36,7 @@
           Construction began in 1869, but was never fully completed.
         </p>
         <picture>
-          <source media="(max-width: 450px)" srcset="img/neuSchwanStein-square-450.jpg?as=avif" width="450" type="image/avif">
+          <source media="(max-width: 450px)" srcset="img/neuSchwanStein_square_650.jpg?as=avif" width="650" type="image/avif">
           <source media="(min-width: 451px)" srcset="img/neuSchwanStein-wide-1080.jpg?as=avif" width="1080" type="image/avif">
           <img src="img/neuSchwanStein-wide-1080.jpg" width="1080" class="img-article" alt="Neuschwanstein">
         </picture>
@@ -48,7 +48,7 @@
         <picture>
           <source media="(max-width: 450px)" srcset="img/neuSchwanStein_MM_450.jpg?as=avif" width="1080" type="image/avif">
           <source media="(min-width: 451px)" srcset="img/neuSchwanStein_MM_1080.jpg?as=webp" width="1080" type="image/webp">
-          <img src="img/neuSchwanStein_MM_1080.jpg" class="img-article" alt="Maria i Marcel">
+          <img src="img/neuSchwanStein_MM_1080.jpg" width="1080" class="img-article" alt="Maria i Marcel">
         </picture>
         <p>
             Neuschwanstein embodies both the contemporaneous architectural fashion known as castle romanticism (German: Burgenromantik), and King Ludwig II's enthusiasm for the operas of Richard Wagner.
@@ -62,7 +62,7 @@
           <picture>
             <source media="(max-width: 450px)" srcset="img/neuSchwanStein_branca_400.jpg?as=avif" width="450" type="image/avif">
             <source media="(min-width: 451px)" srcset="img/neuSchwanStein_branca_1080.jpg?as=avif" width="1080" type="image/avif">
-            <img src="img/neuSchwanStein_branca_1080.jpg" class="img-article" alt="Neuschwanstein">
+            <img src="img/neuSchwanStein_branca_1080.jpg" width="1080" class="img-article" alt="Neuschwanstein">
           </picture>
           <figcaption>
             <p>Neuschwanstein</p>
@@ -80,14 +80,14 @@
         <nav>
           <ul>
             <li><a href="lunersee.html">Lünersee</a></li>
-            <li><a href="">Therme Lindau</a></li>
-            <li><a href="">Zurich</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich">Therme Lindau</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich">Zurich</a></li>
           </ul>
         </nav>
       </div>
     </main>
     <footer class="footer">
-      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
+      <p>2022 © Marcel Weichsel - <img src="img/logo.svg" width="18" height="13" class="logoBottom" alt="logo"> </p>
     </footer>
   </body>
 </html>
