--- a/src/wiki.html
+++ b/src/wiki.html
@@ -53,7 +53,7 @@
         </p>
   </main>
   <footer class="footer">
-    <p>2022 © Marcel Weichsel - <img src="img/logo.svg" class="logoBottom" alt="logo"> </p>
+    <p>2022 © Marcel Weichsel - <img src="img/logo.svg" width="18" height="13" class="logoBottom" alt="logo"> </p>
   </footer>
   </body>
 </html>
